--- a/views/index.ejs
+++ b/views/index.ejs
@@ -179,7 +179,7 @@
               Discover real-life examples from the Seerah that teach honesty, patience, and compassion, guiding young Muslims through modern challenges with moral clarity.
             </p>
           </div>
-          <a class="font-geist font-semibold text-neutral-50 text-center" href="http://localhost:8080/" target="_blank">
+          <a class="font-geist font-semibold text-neutral-50 text-center" href="https://seerah-saathi.onrender.com" target="_blank">
             <button class="rounded-full mx-auto bg-neutral-900 px-8 md:px-10 py-3 items-center justify-center lg:px-12">
               <p class="font-geist font-semibold text-neutral-50 text-center">
                 Get early access
